--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1.0", initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-    <h1> hello world</h1>
+    <h1> subodh umale </h1>
 </body>
 </html>
