--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1.0", initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=1.0,initial-scale=1.0">
+    <title>Subodh Umale</title>
     <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-    <h1> subodh umale </h1>
+   <center> <h1> Hii ,I Am SUBODH UMALE </h1></center>
+ <img src="portimg 1.jpeg" width="350px" height="350px">
+<table cellpadding="6" cellspacing="4">
+<tr> 
+    <th><a href="about.html">#About</div></a></th>
+</tr>
+<tr>
+  
+<tr>
+    <th>
+        <a href="resume.html">#Resume</a>
+    </th>
+</tr>
+  <th>
+        <a href="contact.html">#Contact</a>
+    </th>
+</tr>
+<tr>
+    <th>
+        <a href="https://github.com/dashboard" target="_blank">#Github</a>
+    </th>
+</tr>
+<tr>
+    <th>
+        <a href="xyz.com" target="_blank">#Project</a>
+    </th>
+</tr>
+</table>
+
 </body>
 </html>
